--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "TOKEN": "ODQxODU4ODU0MjU3MTY0MzE4.YJs4Jw.ha98Qu8qmkR2paGPmBPayFghoSQ",
-  "PREFIX": "+",
+  "TOKEN": "MTAwMjM0OTU2NDU4NzY3OTg2NA.G9cjoG.ZsyyX0HU09HpFul-PXOXOw4UrjTnudEjXtFm1M ",
+  "PREFIX": "+a",
   "approveemoji": "769665713124016128",
   "denyemoji": "770326304473350145",
   "erroremoji": "768460113622859788"
